# OS_SE_2024-2025

IHW1/: CMakeLists.txt  report.md
IHW1/04-mark/: 04-mark.c
IHW1/05-mark/: 05-mark.c
IHW1/06-mark/: 06-mark.c
IHW1/07-mark/: 07-mark.c
IHW1/08-mark/: 08-mark-processor.c  08-mark-reader-writer.c
IHW1/09-mark/: 09-mark-processor.c  09-mark-reader-writer.c
IHW1/10-mark/: 10-mark-processor.c  10-mark-reader-writer.c
IHW1/testFiles/: a.cpp  a_o.txt  b_o.txt  c_o.txt  d_o.txt  e_o.txt
